feat: add GitHub Actions CI